# fouriever

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  tutorial_gravity.py  tutorial_kerphase.py  tutorial_niriss_ami.py  tutorial_pionier.py
data/: GRAVI.2018-04-18T08-08-19.739_singlescivis_singlesciviscalibrated.fits  betaPic_00deg.oifits
data/ABDor/: ABDor_NIRISS_F480M.oifits
data/ABDor_cov/: ABDor_NIRISS_F480M.oifits
data/AXCir_cov/: axcir.oifits
data/GRAVITY/: betaPic_90deg.oifits
data/V410Tau_kpfiles/: V410Tau_kpfile.fits
figures/: HIP50156.fits  V410Tau.fits  abdor_smear_cov_sub_detlim_absil.npy  abdor_smear_cov_sub_detlim_injection.npy  axcir_smear_cov_sub_detlim_absil.npy  axcir_smear_cov_sub_detlim_injection.npy
fouriever/: __init__.py  average_oifits.py  inst.py  intercorr.py  klcal.py  plot.py  util.py  uvfit.py
fouriever/opticstools/: opticstools.py  utils.py
tutorials/: tutorial_gravity.py  tutorial_kerphase.py  tutorial_niriss_ami.py  tutorial_pionier.py  tutorial_sphere_sam.py  tutorial_sphere_sam_klip.py
