[metadata]
name = fouriever
version = 0.4.3
description = A single toolkit for calibrations, correlations, and companion search for kernel phase, aperture masking, and long-baseline interferometry data.
long_description = file: README.md
author = Jens Kammerer
url = https://github.com/kammerje/fouriever

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    astropy
    corner
    emcee
    pymultinest
    mpmath

[options.extras_require]
fft =
    pyFFTW
