[metadata]
name = fouriever
version = 1.0.0
description = A single toolkit for calibrations, correlations, and companion search in kernel phase, aperture masking, and long-baseline interferometry data.
long_description = file: README.rst
author = Jens Kammerer
url = https://github.com/kammerje/fouriever

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    corner
    emcee
    matplotlib
    mpmath
    numpy
    pymultinest
    scipy

[options.extras_require]
fft =
    pyFFTW
